<resources>
    <string name="app_name">荣成掌上公交</string>
    <string name="app_city">荣成</string>
    <string name="customized_ticket_buy">购票</string>
    <string name="customized_fuhao">￥</string>
    <string name="customized_location">当前位置</string>
    <string name="customized_linehistory">历史记录</string>
    <string name="customized_brackets_left">(</string>
    <string name="customized_people">人</string>
    <string name="customized_brackets_right">)</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_network">网络异常！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">新浪微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="bus">公交车</string>
    <string name="bicycle">自行车</string>
    <string name="taxi">出租车</string>
    <string name="metro">地铁</string>
    <string name="coach">长途客车</string>
    <string name="train">火车</string>
    <string name="plane">航班</string>
    <string name="traffic">公路路况</string>
    <string name="user">用户中心</string>
    <string name="about">关于我们</string>
    <string name="help">帮助</string>
    <string name="feedback">评价</string>
    <string name="barcode">二维码</string>
    <string name="navigation">自驾</string>
    <string name="nearby">周边</string>
    <string name="share">分享</string>
    <string name="back">返回</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="complete">完成</string>
    <string name="alert">提醒</string>
    <string name="search">搜索</string>
    <string name="wufa">无法充值，请前往乘车码界面开通此功能</string>
    <string name="more">更多</string>
    <string name="unknown">未知</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="other">其他</string>
    <string name="jiaoyi">充值查询</string>
    <string name="qudenglu">登录</string>
    <string name="qudenglushibai">此功能需登录后使用</string>
    <string name="weikait">暂未开通</string>
    <string name="not_supported">尚未支持, 敬请期待!</string>
    <string name="app_init">应用初始化</string>
    <string name="agreement_yes">同意</string>
    <string name="agreement_no">拒绝</string>
    <string name="toast_map_search_no_result">抱歉，未找到结果</string>
    <string name="my_location">我的位置</string>
    <string name="locate_current_city">定位当前城市信息</string>
    <string name="reverse_geocoding_fail">反解析地址失败</string>
    <string name="toast_location_failed">未能获取位置信息</string>
    <string name="unselected">未指定</string>
    <string name="update_local_server">获取服务器地址</string>
    <string name="progress_updating_server">更新服务器地址…</string>
    <string name="toast_current_city_failed">当前城市信息未知</string>
    <string name="toast_city_not_match">所选城市与位置不符</string>
    <string name="toast_sync_data_complete">数据同步完成</string>
    <string name="alert_city_not_selected">尚未选择城市</string>
    <string name="alert_city_not_supported">该城市尚未支持</string>
    <string name="user_auto_login">验证用户信息</string>
    <string name="register">注册</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="resend_verify_code_sec">%1$s秒后重新发送</string>
    <string name="start_verify">进行验证</string>
    <string name="recover_lost_password">找回密码</string>
    <string name="personal_card">个人名片</string>
    <string name="my_account">我的账号</string>
    <string name="change_password">修改密码</string>
    <string name="sync_favorite">同步收藏</string>
    <string name="logout">退出登录</string>
    <string name="set_user_image">设置头像</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_verify_password">请确认密码</string>
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_relaer_phone">请输入正确手机号码</string>
    <string name="prompt_verify_code">输入验证码</string>
    <string name="prompt_nickname">点击此处设置昵称</string>
    <string name="prompt_name">点击此处设置姓名</string>
    <string name="prompt_city">点击此处设置城市</string>
    <string name="prompt_email">点击此处输入邮箱</string>
    <string name="prompt_password_format">3位以上数字或字母</string>
    <string name="prompt_verify_new_password">请重复一遍新密码</string>
    <string name="progress_signing_in">登录中…</string>
    <string name="progress_verifying_code">验证中…</string>
    <string name="progress_registing">注册中…</string>
    <string name="progress_recovering_password">找回密码请求中…</string>
    <string name="progress_storing_user_info">用户信息存储中…</string>
    <string name="progress_updating_portrait">用户头像更新中…</string>
    <string name="progress_authing_taxi_user">认证中…</string>
    <string name="error_invalid_username">无效的用户名</string>
    <string name="error_invalid_password">无效的密码</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_invalid_phone">电话号码格式不正确</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="error_match_verify_password">两次密码输入不一致</string>
    <string name="error_invalid_email">无效的邮箱地址</string>
    <string name="toast_invalid_phone">您输入的电话号码格式不正确</string>
    <string name="toast_sent_verify_code">已向手机发送验证码</string>
    <string name="toast_user_info_not_change">用户信息未改动</string>
    <string name="toast_change_password_success">修改密码成功</string>
    <string name="toast_recover_password_success">密码重置成功</string>
    <string name="toast_sync_favorite_complete">收藏同步完成</string>
    <string name="toast_update_portrait_success">用户头像更新成功</string>
    <string name="toast_user_auth_unknown">用户认证状态未知</string>
    <string name="alert_logout">确定要退出程序?</string>
    <string name="waybook_help">"个人智能的交通出行助手!
 	你是否会经常因为等公交而焦急？
 	你是否因为找不到出租车而烦恼？
 	你是否因为租用的公共自行车无法还掉而郁闷？
 	你是否因为拥塞不堪的道路与高高的油价而希望与人同乘？
 	你是否因为.......而......？
 	现在就拥有Waybook，一切交通出行烦恼迎刃而解。"</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_fb_contact_info_hint">Email, msn, gtalk, or whatever we can find you.</string>
    <string name="umeng_fb_contact_update_at">Updated at</string>
    <string name="umeng_fb_back">Back</string>
    <string name="umeng_fb_title">Feedback</string>
    <string name="umeng_fb_contact_title">Contact</string>
    <string name="umeng_fb_contact_info">Contact Info</string>
    <string name="umeng_fb_reply_content_hint">I want to tell</string>
    <string name="umeng_fb_send">Send</string>
    <string name="umeng_fb_reply_content_default">Your precious feedback are appriciated.</string>
    <string name="umeng_fb_reply_date_default">2013-3-12 13:24:00</string>
    <string name="umeng_fb_powered_by">Powered by</string>
    <string name="umeng_fb_notification_ticker_text">Got new reply</string>
    <string name="umeng_fb_notification_content_formatter_single_msg">New reply: %s</string>
    <string name="title_tips_confim">确定</string>
    <string name="title_tips_cancel">取消</string>
    <string name="commit">提交</string>
    <string name="login">登录</string>
    <string name="login_password">请输入密码</string>
    <string name="forgrt_password">忘记密码</string>
    <string name="login_register">注册账号</string>
    <string name="write_phone">请输入手机号</string>
    <string name="write_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="write_new">新密码</string>
    <string name="write_newsure">确认新密码</string>
    <string name="write_password">输入新密码</string>
    <string name="write_password1">输入原密码</string>
    <string name="write_password_agin">请输入新密码</string>
    <string name="first_page">首页</string>
    <string name="old_password">原密码</string>
    <string name="first_my">我的</string>
    <string name="bus_code">乘车码</string>
    <string name="query_history">查询历史</string>
    <string name="complaints">乘客建议</string>
    <string name="content">内容</string>
    <string name="content_write">请输入内容</string>
    <string name="notice">通告</string>
    <string name="notice1">通知</string>
    <string name="notice2">通告</string>
</resources>