<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="main.sheet.complaints.ComplaintsUpActivity">

    <main.utils.views.Header
        android:id="@+id/header"
        style="@style/Header"
        app:header_title="@string/complaints"
        app:header_title_right="@string/query_history">
    </main.utils.views.Header>

    <TextView
        style="@style/TextView1"
        android:layout_width="match_parent"
        android:layout_marginLeft="0dp"
        android:paddingLeft="15dp"
        android:text="@string/prompt_phone" />

    <TextView
        android:id="@+id/etPhone"
        style="@style/TextView1"
        android:layout_width="match_parent"
        android:layout_marginLeft="0dp"
        android:hint="@string/prompt_phone"
        android:paddingLeft="15dp" />

    <View style="@style/HourLine" />

    <TextView
        style="@style/TextView1"
        android:layout_width="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:paddingLeft="15dp"
        android:text="@string/content" />

    <main.utils.views.ForbidEmojiEditText
        android:id="@+id/etContent"
        style="@style/TextView1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="0dp"
        android:layout_margin="4dp"
        android:gravity="top"
        android:background="@drawable/linearlayout_nocolore_radius"
        android:hint="@string/content_write"
        android:padding="15dp" />

    <View style="@style/HourLine" />

    <Button
        android:id="@+id/btnUp"
        style="@style/Button"
        android:text="@string/commit"/>


</LinearLayout>
