<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <main.utils.views.Header
        android:id="@+id/header"
        style="@style/Header"
        app:header_title="@string/forgrt_password">
    </main.utils.views.Header>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImaheView"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_phone" />

        <EditText
            android:id="@+id/etPhone"
            style="@style/EditText"
            android:hint="@string/write_phone"
            android:textColor="@color/bg_do_botttom" />
    </LinearLayout>
    <View style="@style/HourLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImaheView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/etCode"
            style="@style/EditText"
            android:hint="@string/write_code"
            android:textColor="@color/bg_do_botttom" />
        <TextView
            android:id="@+id/tvCode"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="@string/get_code"
            android:gravity="center"
            android:background="@color/qianhui"
            android:textColor="@color/color_bg_selected" />
    </LinearLayout>
    <View style="@style/HourLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImaheView"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/etPassWordAgin"
            style="@style/EditText"
            android:hint="@string/write_password_agin"
            android:textColor="@color/bg_do_botttom" />
        <ImageView
            android:id="@+id/ivSeeNewPwAgain"
            android:layout_width="45dp"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:src="@drawable/ic_see_password"/>
    </LinearLayout>
    <View style="@style/HourLine"/>

    <Button
        android:id="@+id/btnUp"
        style="@style/Button"
        android:text="@string/title_tips_confim"/>
</LinearLayout>