<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="main.sheet.notice.NoticeListActivity">

    <main.utils.views.Header
        android:id="@+id/header"
        style="@style/Header"
        app:header_title="@string/notice">
    </main.utils.views.Header>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_below="@+id/fragment_container"
        android:layout_height="55dip"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb1"
            android:checked="true"
            style="@style/RadionButton"
            android:text="@string/notice1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:background="@color/gray"
            android:layout_gravity="center"/>
        <RadioButton
            android:id="@+id/rb2"
            style="@style/RadionButton"
            android:text="@string/notice2"/>
    </RadioGroup>
    <View style="@style/HourLine"/>

    <FrameLayout
        android:layout_weight="1"
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
