<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/setting_titlebar" android:background="@drawable/titlebar_bg" android:padding="0.0dip" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <Button android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/setting_back_btn" android:background="@drawable/titlebar_back_button" android:layout_width="60.0dip" android:layout_height="36.0dip" android:layout_marginLeft="4.0dip" android:text="@string/back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:onClick="back" />
        <TextView android:textSize="20.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="设置" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="@drawable/frame_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@+id/about_us_btn" android:background="@drawable/base_selector" android:paddingLeft="20.0dip" android:paddingRight="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/about" android:drawableRight="@drawable/ic_arrow" android:onClick="toAboutPage" />
            <View android:background="@color/divider_gray" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@+id/help_btn" android:background="@drawable/base_selector" android:paddingLeft="20.0dip" android:paddingRight="8.0dip" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/help" android:drawableRight="@drawable/ic_arrow" android:onClick="toHelpPage" />
            <View android:background="@color/divider_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@+id/feedback_btn" android:background="@drawable/base_selector" android:paddingLeft="20.0dip" android:paddingRight="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/feedback" android:drawableRight="@drawable/ic_arrow" android:onClick="toFeedbackPage" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>