<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <main.utils.views.Header
        android:id="@+id/header"
        style="@style/Header"
        app:header_title="@string/login">
    </main.utils.views.Header>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImaheView"
            android:layout_height="wrap_content"
            android:layout_width="28dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_username" />

        <EditText
            android:id="@+id/etUserName"
            style="@style/EditText"
            android:hint="@string/prompt_phone"
            android:textColor="@color/bg_do_botttom" />
    </LinearLayout>
    <View style="@style/HourLine"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImaheView"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/etPassWord"
            style="@style/EditText"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="@color/bg_do_botttom" />
        <ImageView
            android:id="@+id/ivSeeNewPw"
            android:layout_width="45dp"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_see_password"/>
    </LinearLayout>
    <View style="@style/HourLine"></View>

    <Button
        android:id="@+id/btn_login"
        style="@style/Button"
        android:background="@drawable/linearlayout_colore_radius"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvForgrtPassword"
            style="@style/TextView"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:hint="@string/forgrt_password"
            android:gravity="right"
            android:paddingRight="5dp"/>
        <View
            android:layout_width="2dp"
            android:layout_height="10dp"
            android:background="@color/gray"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tvRegister"
            style="@style/TextView"
            android:textColor="@color/bg_do_botttom"
            android:hint="@string/login_register"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentEnd="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="点击登录或注册表示您已阅读并同意荣成掌上公交"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="《用户协议》"
                    android:textColor="@color/color_bg_selected"/>
                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="《隐私政策》"
                    android:textColor="@color/color_bg_selected"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>